--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h2>ระบบส่ง SMS เพื่อการศึกษา</h2>
-  <form action="https://test-sms.onrender.com" method="POST">
+  <form action="/send" method="POST">
     <label>เบอร์โทรศัพท์:</label><br>
     <input type="text" name="phone" placeholder="0812345678" required><br><br>
 
